feat: fetching users in group
