# docs/swagger.yaml
@@ -153,6 +153,11 @@ paths:
         name: facility_id
         required: true
         type: string
+      - description: group
+        in: query
+        name: group
+        required: true
+        type: string
       produces:
       - application/json
       responses:
